--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,11 @@ span {
   font-family: inherit;
   font-weight: inherit;
 }
+
+.blueShadow {
+  box-shadow: 3px 3px 0 0 #60a5fa;
+}
+
+.blueShadow:hover {
+  box-shadow: 3px 3px 0 0 #60a5fa;
+}
